<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memetro</string>
    <string name="action_settings">Ajustes</string>
    <string name="hello_world">Hello World!</string>
    <string name="cancel">Cancelar</string>
    <string name="continue_text">Continuar</string>
    <string name="skip">Omitir</string>
    <string name="close">Cerrar</string>
    <string name="alert">Alerta</string>
    <string name="error">Error</string>
    <string name="create">Crear</string>
    <string name="ago">Hace</string>
    <string name="send">Enviar</string>

    <string name="alert_created_by">Alerta creada por</string>

    <!-- Recover pass -->
    <string name="example_mail">example@mail.com</string>
    <string name="recover_pass_title">Recuperar contraseña</string>
    <string name="recover_pass_text">Para recuperar tu contraseña introduce tu email y sigue los pasos que te enviaremos.</string>
    <string name="recover_ok">Hemos enviado los detalles a tu cuenta de email.</string>
    <string name="recover_ko">El email introducido no esta registrado.</string>

    <!-- Errors -->
    <string name="action_not_found">Acción no encontrada. Intentalo de nuevo en unos minutos.</string>
    <string name="token_denied">Se ha denagado el acceso. Desconectate y vuelvete a conectar.</string>
    <string name="server_error">Error en el servidor. Intentalo de nuevo en unos minutos.</string>
    <string name="internal_error">Error interno. Intentalo de nuevo en unos minutos.</string>
    <string name="json_error">Error leyendo datos. Intentalo de nuevo en unos minutos.</string>
    <string name="session_expired">La sesión ha caducado.</string>
    <string name="no_alerts">No hay alertas recientes.</string>
    <string name="min_pass_lenght">La contraseña debe tener mínimo 8 carácteres</string>

    <!-- LOGIN -->
    <string name="login">Entrar</string>
    <string name="register">Registrarse</string>
    <string name="login_error">Usuario o contraseña incorrectos</string>
    <string name="login_loading">Entrando…</string>
    <string name="sync_error">Error sincronizando datos</string>

    <!-- COMUNES -->
    <string name="save">Guardar</string>
    <string name="delete">Borrar</string>
    <string name="alert_deleted">Alerta eliminada</string>
    <string name="error_deleting_alert">Error al eliminar la alerta</string>

    <!-- REGISTER -->
    <string name="name">Nombre</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="user_twitter">Usuario Twitter</string>
    <string name="mail">Mail</string>
    <string name="about_me">Sobre mi</string>
    <string name="register_loading">Registrando…</string>
    <string name="register_error">Error en el registro</string>
    <string name="register_ok">Registrado correctamente</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <!-- Left Menu -->
    <string name="participants_menu">PARTICIPANTES</string>
    <string name="memetro_menu">ASOCIACIÓN MEMETRO</string>
    <string name="configuration_menu">CONFIGURACIÓN</string>
    <string name="info_menu">INFO APP</string>
    <string name="alerts_menu">ALERTAS</string>
    <string name="logout_menu">DESCONECTAR</string>

    <!-- Alerts -->
    <string name="description">Descripción</string>
    <string name="alert_created">Alerta creada!</string>
    <string name="alert">Alerta</string>

    <string name="seconds">segundos</string>
    <string name="hours">horas</string>
    <string name="days">días</string>
    <string name="minutes">minutos</string>

    <!-- Setting -->
    <string name="user_city">TU CIUDAD</string>
    <string name="silent_notifications">Silenciar notificaciones</string>
    <string name="saved_notifications">Notificaciones guardadas</string>
    
    <!-- Asociación -->
    <string name="transtorno">Transtorno</string>
    <string name="asociarse">Asociarse</string>
    <string name="asesoriamiento">Asesoramiento</string>
    <string name="memetroles">Memetroles</string>
    <string name="sintomas">Sintomas</string>
    <string name="contacto">Contacto</string>


</resources>
