<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@null"
                android:drawableTop="@drawable/association_transtorno"
                android:text="@string/transtorno"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@null"
                android:drawableTop="@drawable/association_join"
                android:text="@string/asociarse"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@null"
                android:drawableTop="@drawable/association_help"
                android:text="@string/asesoriamiento"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@null"
                android:drawableTop="@drawable/association_troles"
                android:text="@string/memetroles"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@null"
                android:drawableTop="@drawable/association_sintomas"
                android:text="@string/sintomas"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@null"
                android:drawableTop="@drawable/association_contact"
                android:text="@string/contacto"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>