<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:padding="20dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/alert"/>
    <TextView
        android:id="@+id/message"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="#888888"
        android:text="@string/error"/>
    <Button
        android:id="@+id/close"
        android:layout_marginTop="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        style="@style/button_black"/>
</LinearLayout>