<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include layout="@layout/top_color_bar" />

    <ScrollView
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:scrollbars="none"
        android:clickable="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:src="@drawable/memetro_logo"
                android:layout_marginBottom="20dp"
                android:contentDescription="memetro_logo"/>

            <EditText android:id="@+id/name"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                style="@style/edit_text"
                android:padding="15dp"
                android:layout_marginTop="5dp"/>

            <EditText android:id="@+id/mail"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                style="@style/edit_text"
                android:padding="15dp"
                android:layout_marginTop="5dp"/>

            <EditText android:id="@+id/twitter"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_twitter"
                style="@style/edit_text"
                android:padding="15dp"
                android:layout_marginTop="5dp"/>

            <EditText android:id="@+id/about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about_me"
                style="@style/edit_text"
                android:padding="15dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            style="@style/button_black"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register"
            style="@style/button_red"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
    </LinearLayout>

</LinearLayout>