<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:padding="20dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/alert_created_by"/>
    <TextView
        android:id="@+id/message"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="#888888"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_weight="1"
            android:id="@+id/close"
            android:layout_marginRight="5dp"
            android:layout_marginTop="23dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            style="@style/button_black"/>
        <Button
            android:visibility="gone"
            android:layout_weight="1"
            android:id="@+id/delete"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="23dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            style="@style/button_red"/>
    </LinearLayout>
</LinearLayout>