<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <include layout="@layout/top_color_bar" />

    <ScrollView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/logo"
                    android:layout_marginTop="23dp"
                    android:layout_gravity="center"
                    android:src="@drawable/memetro_logo"/>

            <EditText android:id="@+id/username"
                      android:layout_weight="1"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/username"
                      android:singleLine="true"
                      style="@style/edit_text"
                      android:padding="15dp"
                      android:layout_marginTop="5dp"/>

            <EditText android:id="@+id/password"
                      android:layout_weight="1"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/password"
                      style="@style/edit_text"
                      android:padding="15dp"
                      android:inputType="textPassword"
                      android:layout_marginTop="5dp"/>

            <Button
                    android:layout_marginTop="23dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/login"
                    style="@style/button_black"/>

            <Button
                    android:layout_marginTop="23dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:id="@+id/register"
                    style="@style/button_red"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
