<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="300dp"
            android:background="#0f0f0f"
            android:layout_height="match_parent" >
    <LinearLayout
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

        <!-- User Info -->
        <LinearLayout
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal">

            <ImageView
                    android:clickable="true"
                    android:paddingLeft="5dp"
                    android:src="@drawable/ic_launcher"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/avatarMenu"/>

            <TextView
                    android:paddingLeft="9dp"
                    android:background="@null"
                    android:layout_weight="1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:textColor="#888888"
                    android:text=" @redMemetro "
                    android:id="@+id/usernameMenu"/>
        </LinearLayout>

        <!-- Alerts, Memetrols... -->
        <LinearLayout
                android:layout_marginTop="10dp"
                android:background="#f4f3f2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:orientation="horizontal">

            <!-- <ImageView
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:src="@drawable/menu_speaker"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:src="@drawable/menu_pill"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:src="@drawable/ninja"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/> -->
        </LinearLayout>

        <!-- Participants -->
        <!-- <LinearLayout
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/participantsMenu">

            <ImageView
                    android:src="@drawable/menu_dna"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"/>

            <TextView
                    android:paddingLeft="9dp"
                    android:background="@null"
                    android:layout_weight="1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#888888"
                    android:text="@string/participants_menu"/>
        </LinearLayout> -->

        <!-- Configuration -->
        <LinearLayout
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/alertsMenu">

            <ImageView
                android:src="@drawable/menu__alert"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"/>

            <TextView
                android:paddingLeft="9dp"
                android:background="@null"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#888888"
                android:text="@string/alerts_menu"/>
        </LinearLayout>

        <!-- Memetro -->
        <LinearLayout
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/memetroMenu">

            <ImageView
                    android:src="@drawable/menu_person"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"/>

            <TextView
                android:paddingLeft="9dp"
                android:background="@null"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#888888"
                android:text="@string/memetro_menu"/>
        </LinearLayout>

        <!-- Configuration -->
        <LinearLayout
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/configMenu">

            <ImageView
                    android:src="@drawable/menu_brain"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"/>

            <TextView
                    android:paddingLeft="9dp"
                    android:background="@null"
                    android:layout_weight="1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#888888"
                    android:text="@string/configuration_menu"/>
        </LinearLayout>

        <!-- Info App -->
        <LinearLayout
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/infoMenu">

            <ImageView
                    android:src="@drawable/menu_dna"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"/>

            <TextView
                    android:paddingLeft="9dp"
                    android:background="@null"
                    android:layout_weight="1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#888888"
                    android:text="@string/info_menu"/>
        </LinearLayout>

        <!-- Logout -->
        <LinearLayout
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/logoutMenu">

            <ImageView
                    android:src="@drawable/menu_logout"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"/>

            <TextView
                    android:paddingLeft="9dp"
                    android:background="@null"
                    android:layout_weight="1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#888888"
                    android:text="@string/logout_menu"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>